--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family:
