--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f024d5;
 }
 
 code {
