Styled cities component

--- a/src/components/styles/Weather.css
+++ b/src/components/styles/Weather.css
@@ -19,16 +19,109 @@
 .map-header {
   align-items: center;
   display: flex;
-  gap: 20px;
-  padding: 20px;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .map img {
-    width: 10rem;
+  width: 10rem;
 }
 
 .map-header h1 {
-    color: #fff;
-    margin-top: 0.6rem;
-    margin-left: 1rem;
+  color: #fff;
+  margin-top: 0.6rem;
+  margin-left: 1rem;
+}
+
+.cities {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cities a:nth-of-type(8n - 7),
+.cities a:nth-child(8n) {
+  align-items: center;
+  background-color: #081c15;
+  color: #fff;
+  display: flex;
+  height: 9.375rem;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  width: 50%;
+}
+
+.cities a:nth-of-type(8n - 6),
+.cities a:nth-of-type(8n - 5) {
+  background-color: #2c4737;
+  align-items: center;
+  color: #fff;
+  display: flex;
+  height: 9.375rem;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  width: 50%;
+}
+
+.cities a:nth-child(8n - 4),
+.cities a:nth-child(8n - 3) {
+  background-color: #081c15;
+  align-items: center;
+  color: #fff;
+  display: flex;
+  height: 9.375rem;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  width: 50%;
+}
+
+.cities a:nth-child(8n - 2),
+.cities a:nth-of-type(8n - 1) {
+  background-color: #2c4737;
+  align-items: center;
+  color: #fff;
+  display: flex;
+  height: 9.375rem;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  width: 50%;
+}
+
+.good {
+  color: #0f0;
+}
+
+.fair {
+  color: #5affa5;
+}
+
+.moderate {
+  color: #ff0;
+}
+
+.poor {
+  color: #fa0;
+}
+
+.very-poor {
+  color: #f00;
+}
+
+.quality {
+  padding-right: 0.4rem;
+}
+
+.quality-index-header {
+  padding-right: 0.4rem;
+}
+
+.cities-weather h2 {
+  padding-bottom: 0.5rem;
+}
+
+.air-quality {
+  margin-bottom: 0.5rem;
 }
