--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f024d5;
+  background-color: rgba(252, 81, 147, 255);
 }
 
 code {
