--- a/src/components/styles/WeatherDetails.css
+++ b/src/components/styles/WeatherDetails.css
@@ -44,8 +44,10 @@
   font-size: 1.5rem;
   height: 4rem;
   text-align: center;
+  color: #fff;
 }
 
 .data-component-wrap:nth-child(2n) {
   background-color: #df4580;
+  color: #fff;
 }
