--- a/src/components/styles/Weather.css
+++ b/src/components/styles/Weather.css
@@ -16,6 +16,24 @@
   margin-right: 3rem;
 }
 
+.filter {
+  margin-top: 0.3rem;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(252, 81, 147, 255);
+  border-radius: 4px;
+  font-size: 16px;
+  color: rgba(252, 81, 147, 255);
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+input[type="text"]::placeholder {
+  color: rgba(252, 81, 147, 0.8);
+}
+
 .map-header {
   align-items: center;
   display: flex;
